versioned_docs/version-6.2/sharding/backup-and-restore/backup.mdx
---
title: "Sharding: Backup"
sidebar_label: Backup
sidebar_position: 0
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Sharding: Backup
<Admonition type="note" title="">

* Sharded databases are backed up using user-defined periodic 
  [backup tasks](../../server/ongoing-tasks/backup-overview.mdx).  

* Shards can store backup files **locally** (each shard using its 
  own node machine storage) and/or **remotely** (all shards sending 
  backup files to a common remote destination like an AWS S3 bucket).  

* Both [Full](../../server/ongoing-tasks/backup-overview.mdx#full-backup) 
  and [Incremental](../../server/ongoing-tasks/backup-overview.mdx#incremental-backup) 
  backups can be created for a sharded database.  

* A [logical](../../server/ongoing-tasks/backup-overview.mdx#logical-backup) 
  backup **can** be created for a sharded database and restored into either 
  a sharded or a non-sharded database.  

* A [snapshot](../../server/ongoing-tasks/backup-overview.mdx#snapshot) **cannot** be created for a sharded database  
  (and sharded databases are automatically excluded from server-wide **snapshot** backups).    

* A manual [one-time](../../studio/database/tasks/backup-task.mdx#manually-creating-one-time-backups) 
  backup **can** be created for a sharded database.  

* In this page:  
  * [Backup](../../sharding/backup-and-restore/backup.mdx#backup)  
     * [Sharded and Non-Sharded Backup Tasks](../../sharding/backup-and-restore/backup.mdx#sharded-and-non-sharded-backup-tasks)  
     * [Backup Storage: Local and Remote](../../sharding/backup-and-restore/backup.mdx#backup-storage-local-and-remote)  
     * [Backup Files Extension and Structure](../../sharding/backup-and-restore/backup.mdx#backup-files-extension-and-structure)  
     * [Backup Type](../../sharding/backup-and-restore/backup.mdx#backup-type)  
     * [Backup Scope](../../sharding/backup-and-restore/backup.mdx#backup-scope)  
     * [Naming Convention](../../sharding/backup-and-restore/backup.mdx#naming-convention)  
     * [Server-Wide Backup](../../sharding/backup-and-restore/backup.mdx#server-wide-backup)  
     * [Example](../../sharding/backup-and-restore/backup.mdx#example)  
  * [Backup Options Summary](../../sharding/backup-and-restore/backup.mdx#backup-options-summary)  

</Admonition>
## Backup

## Sharded and Non-Sharded Backup Tasks

From a user's perspective, backing up a sharded database is done by 
defining and running **a single backup task**, just like it is done 
with a non-sharded database.  

Behind the scenes, though, each shard backs up its own slice of the 
database independently from other shards.  

Distributing the backup responsibility between the shards allows 
RavenDB to speed up the backup process and keep backup files in 
manageable proportions no matter what the overall database size is.  

### Non-Sharded DB Backup Tasks

* A complete replica of the database is kept by each cluster node.  
* Any node can therefore be made 
  [responsible](../../server/clustering/distribution/highly-available-tasks.mdx#responsible-node) 
  for backups by the cluster.  
* The responsible node runs the backup task periodically to create 
  a backup of the entire database.  
  
### Sharded DB Backup Tasks

* Each shard hosts a unique part of the database, so no single node 
  can create a backup of the entire database.  
* After a user defines a backup task, RavenDB automatically creates 
  one backup task per shard, based on the user-defined task.  
  This operation is automatic and requires no additional actions 
  from the user.  
* Each shard appoints [one of its nodes](../../sharding/overview.mdx#shard-replication) 
  responsible for the execution of the shard's backup task.  
* Each shard backup task can keep the shard's database 
  locally (on the shard machine), and/or remotely (on one 
  or more cloud destinations).  
* A backup task can store backups on multiple destinations, 
  e.g. locally, on an S3 bucket, and on an Azure blob.  
* To [restore](../../sharding/backup-and-restore/restore.mdx) 
  the entire database, the restore process is provided with 
  the locations of the backup folders used by all shards.  
* When restoring the database, the user doesn't have to restore 
  all shard backups. It is possible, for example, to restore only 
  one of the shards. Using this flexibility, a sharded database 
  can easily be split into several databases.  

## Backup Storage: Local and Remote

Backup files can be stored locally and remotely.  
Find a code example [here](../../sharding/backup-and-restore/backup.mdx#example).  

* **Local Backup**  
  A shard's backup task may keep backup data locally, 
  using the node's local storage.  

    [Restoring](../../sharding/backup-and-restore/restore.mdx#section-2) 
    backup files that were stored locally requires the user to provide 
    the restore process with the location of the backup folder on each 
    shard's node.  

* **Remote location**  
  Backups can also be kept remotely. All shards will transfer 
  the backup files to a common location, using one of the currently 
  supported platforms:  
   * Azure Blob Storage  
   * Amazon S3 Storage  
   * Google Cloud Platform  

    [Restoring](../../sharding/backup-and-restore/restore.mdx#section-2) 
    backup files that were stored remotely requires the user to provide 
    the restore process with each shard's backup folder location.  

## Backup Files Extension and Structure

backup files use the same internal structure as the `.ravendbdump` 
files that [Studio](../../studio/database/tasks/export-database.mdx) 
and [Smuggler](../../client-api/smuggler/what-is-smuggler.mdx) 
create when **exporting** data.  
It is therefore possible to not only [restore](../../sharding/backup-and-restore/restore.mdx) 
but also **import** backup files using [studio](../../studio/database/tasks/import-data/import-data-file.mdx) 
and [smuggler](../../client-api/smuggler/what-is-smuggler.mdx#import).  
Read more about this feature [here](../../sharding/import-and-export.mdx#import).  


<Admonition type="note" title="">
Backed-up data includes both 
[database-level and cluster-level content](../../server/ongoing-tasks/backup-overview.mdx#backup-contents).  
</Admonition>

## Backup Type

A backup task for a sharded database can create a [logical backup](../../backup/overview#logical-backup) only.

A [Snapshot](../../backup/overview#snapshot-image) backup **cannot** be created for a sharded database.  

`Logical` backups created for a sharded database can be restored into both sharded and non-sharded databases.  

## Backup Scope

A backup task for a sharded database can create a [full backup](../../backup/overview#full-backup) with the entire content of each shard,  
or an [incremental backup](../../backup/overview#incremental-backup) with just the difference between the current data and the last backed-up data.  

## Naming Convention

* Backup files created for a sharded database generally follow the same naming 
  [convention](../../server/ongoing-tasks/backup-overview.mdx#backup-name-and-folder-structure) 
  as non-sharded database backups.  

* Each shard keeps its backup files in a folder whose name consists of:  
   * **Date and Time** (when the folder was created)  
   * **Database Name**  
   * `$` symbol  
   * **Shard Number**  

      The backup folders for a 3-shard database named "Books", 
      for example, can be named:  
      `2023-02-05-16-17.Books$0` for shard 0  
      `2023-02-05-16-17.Books$1` for shard 1  
      `2023-02-05-16-17.Books$2` for shard 2  

## Server-Wide Backup

[Server-wide backup](../../studio/server/server-wide-backup.mdx) creates and runs the required backup tasks
for the databases hosted by the cluster at the scheduled time.
    
* A server-wide **logical** backup creates backups for both non-sharded and sharded databases.  
  For a sharded database, RavenDB defines and executes a backup task for each shard,  
  as if the task was defined manually.  

* A server-wide **snapshot** backup excludes sharded databases, since snapshots cannot be created for sharded databases.
  RavenDB automatically adds sharded database names to the server-wide snapshot task's `ExcludedDatabases` list,
  including sharded databases created after the task already exists.  

## Example

The backup task that we define here is similar to the task we 
would define for a non-sharded database. As part of a sharded 
database, however, this task will be re-defined automatically 
by the orchestrator for each shard.  
<TabItem value="backup_remote_destinations" label="backup_remote_destinations">
<CodeBlock language="csharp">
{`var config = new PeriodicBackupConfiguration
\{
    LocalSettings = new LocalSettings
    \{
        FolderPath = @"E:/RavenBackups"
    \},

    //Azure Backup settings
    AzureSettings = new AzureSettings
    \{
        StorageContainer = "storageContainer",
        RemoteFolderName = "remoteFolder",
        AccountName = "JohnAccount",
        AccountKey = "key"
    \},

    //Amazon S3 bucket settings
    S3Settings = new S3Settings
    \{
        AwsAccessKey = "your access key here",
        AwsSecretKey = "your secret key here",
        AwsRegionName = "OPTIONAL",
        BucketName = "john-bucket"
    \},

    // Google Cloud bucket settings
    GoogleCloudSettings = new GoogleCloudSettings
    \{
        BucketName = "your bucket name here",
        RemoteFolderName = "remoteFolder",
        GoogleCredentialsJson = "your credentials here"
    \}
\};

var operation = new UpdatePeriodicBackupOperation(config);
var result = await docStore.Maintenance.SendAsync(operation);
`}
</CodeBlock>
</TabItem>

<Admonition type="warning" title="Casting Backup Results" id="casting-backup-results" href="#casting-backup-results">
In a sharded database, results are returned by Backup in a `ShardedBackupResult` type.  
This type is specific to a sharded database, and casting it using a non-sharded type 
[will fail](../../migration/client-api/client-breaking-changes.mdx#casting-smuggler-results).  
</Admonition>



## Backup Options Summary

| Option | Available on a Sharded Database | Comment |
| -------------------- | --------------- | --------------------- |
| Store backup files created by shards in **local shard machine storage** | **Yes** | Shards can store the backups they create locally. |
| Store backup files of sharded databases [remotely](../../sharding/backup-and-restore/backup.mdx#backup-storage-local-and-remote) | **Yes** | Shards can store the backups they create on remote S3, Azure, or Google Cloud destinations. |
| Create [Full](../../server/ongoing-tasks/backup-overview.mdx#full-backup) backups for sharded databases | **Yes** |  |
| Create [Incremental](../../server/ongoing-tasks/backup-overview.mdx#incremental-backup) backups for sharded databases | **Yes** |  |
| Create [Logical](../../server/ongoing-tasks/backup-overview.mdx#logical-backup) backups for sharded databases | **Yes** |  |
| Create [Snapshot](../../server/ongoing-tasks/backup-overview.mdx#snapshot) backups for sharded databases | **No** | Snapshot backups CANNOT be created for (nor restored to) sharded databases. |
| Create **periodic backup tasks** for sharded databases | **Yes** |  |
| Run a manual [one-time](../../studio/database/tasks/backup-task.mdx#manually-creating-one-time-backups) backup operation on a sharded database | **Yes** |  |
| Include sharded databases in a [server-wide backup operation](../../sharding/backup-and-restore/backup.mdx#server-wide-backup)   | **Yes (logical only)** | A server-wide **logical** backup includes all databases, including sharded ones. Sharded databases are automatically **excluded** from server-wide **snapshot** backups. |



